# BookmarkDirectories

./: Cargo.toml  README.md
src/: command.sh  main.rs
