[package]
name = "BookmarkDirectories"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Sha-dos/BookmarkDirectories"
readme = "README.md"
description = "A small package for saving and loading directories in terminal"

[[bin]]
name = "mrk"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
